// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion component testing Accordion 1`] = `
<DocumentFragment>
  <div
    class="sc-fmZSGO isZkOb"
  >
    <div
      aria-controls="accordion-content-Accordion Title"
      aria-expanded="false"
      class="sc-hKDTPf sc-gwsNht fLQWeN ccuPMD"
      display="flex"
      role="button"
      tabindex="0"
    >
      <div
        class="sc-dYOLZc bxHtFe"
      >
        Accordion Title
      </div>
      <div
        class="sc-jZhnRx hLIQwz"
      >
        <div
          class="sc-hoLldG efpvvb"
        >
          <span
            class="sc-bXdtCk ggTZnd"
            size="18"
          >
            <svg
              viewBox="0 0 20 20"
            >
              <path
                d="m10 10.9 4.1-4.1 1.2 1.1-5.3 5.3L4.7 8l1.2-1.1z"
                fill="black"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="sc-hBDmJg cwUEFm"
      height="0px"
      overflow="hidden"
    >
      Accordion Content
    </div>
  </div>
</DocumentFragment>
`;

exports[`Accordion component testing Disable Accordion 1`] = `
<DocumentFragment>
  <div
    class="sc-fmZSGO isZkOb"
  >
    <div
      aria-controls="accordion-content-Accordion Title"
      aria-expanded="false"
      class="sc-hKDTPf sc-gwsNht cafLzS edXGkp"
      disabled=""
      display="flex"
      role="button"
      tabindex="-1"
    >
      <div
        class="sc-dYOLZc bxHtFe"
      >
        Accordion Title
      </div>
      <div
        class="sc-jZhnRx hLIQwz"
      >
        <div
          class="sc-hoLldG efpvvb"
        >
          <span
            class="sc-bXdtCk ggTZnd"
            size="18"
          >
            <svg
              viewBox="0 0 20 20"
            >
              <path
                d="m10 10.9 4.1-4.1 1.2 1.1-5.3 5.3L4.7 8l1.2-1.1z"
                fill="#B3BAC1"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="sc-hBDmJg cwUEFm"
      height="0px"
      overflow="hidden"
    >
      Accordion Content
    </div>
  </div>
</DocumentFragment>
`;
